third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/overwrite-02.stderr
TOML parse error at line 3, column 1
  |
3 | [a.b]
  | ^
invalid table header
dotted key `a` attempted to extend non-table type (inline table)
